feat(Ingredients): Refactor, optional translation disable added
